<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/imgblue"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ie.ait.stephen.recmoviesapp.QueryGenres"
    tools:showIn="@layout/activity_query_genres">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/movieGenre"
        android:text="@string/search_genre_button"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:textColor="#ffffff"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enterGenres"
        android:layout_below="@+id/movieGenre"
        android:layout_marginTop="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/btnGenreHint"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/bGenres"
        android:layout_below="@+id/enterGenres"
        android:layout_marginTop="100dp"
        android:text="@string/btnSearchGenres"
        android:background="@drawable/rnd_button"
        android:textSize="15sp"
        android:textStyle="italic"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="onButtonClick"/>

</RelativeLayout>
